# interview-copilot

./: .gitignore  LICENSE  README.md  pyproject.toml
src/: __main__.py
