[tool.poetry]
name = "transcription-hypercortex"
version = "0.1.0"
description = ""
authors = ["Ben Harman <bharman413@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
openai = "^0.28.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
